<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:src="@drawable/ic_smartphone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_48dp"
        android:text="@string/verification_code"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/textSize24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/header_image"
        app:layout_constraintStart_toStartOf="@id/header_image"
        app:layout_constraintTop_toBottomOf="@id/header_image" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:gravity="center"
        android:text="@string/verification_msg_mobile"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/textSize16sp"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/phone_hint"
        app:layout_constraintEnd_toEndOf="@id/sub_title"
        app:layout_constraintStart_toStartOf="@id/sub_title"
        app:layout_constraintTop_toBottomOf="@id/sub_title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:src="@drawable/ic_pencil"
        app:layout_constraintBottom_toBottomOf="@id/phone"
        app:layout_constraintStart_toEndOf="@id/phone"
        app:layout_constraintTop_toTopOf="@id/phone" />

    <LinearLayout
        android:id="@+id/ll_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:orientation="horizontal"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/sub_title"
        app:layout_constraintStart_toStartOf="@id/sub_title"
        app:layout_constraintTop_toBottomOf="@id/phone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circular_background"
            android:gravity="center"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:background="@drawable/circular_background"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:background="@drawable/circular_background"
            android:gravity="center"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:background="@drawable/circular_background"
            android:gravity="center"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/button_submit_otp"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_56dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:background="@drawable/round_corner_background"
        android:backgroundTint="@color/teal_bg"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>