<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/login_account"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hello_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/welcome"
        android:textColor="@color/grey_text"
        android:textSize="@dimen/textSize14sp"
        app:layout_constraintStart_toStartOf="@id/tv_login_header"
        app:layout_constraintTop_toBottomOf="@id/tv_login_header" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:backgroundTint="#f8f7fc"
        app:cardCornerRadius="@dimen/dimen_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_hello_header"
        app:layout_constraintTop_toBottomOf="@id/tv_hello_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingBottom="@dimen/dimen_8dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <TextView
                android:id="@+id/email_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimen_32dp"
                android:paddingTop="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_32dp"
                android:paddingBottom="@dimen/dimen_8dp"
                android:text="@string/email"
                android:textColor="@color/grey_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guide_center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phn_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:background="@drawable/round_corner_background"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingTop="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_16dp"
                android:paddingBottom="@dimen/dimen_8dp"
                android:text="@string/phone_number"
                android:textColor="@color/grey_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guide_center"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_phn_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_56dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize16sp"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phn_container"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:background="@drawable/round_corner_grey_border_background"
        app:cardCornerRadius="@dimen/dimen_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_phn_header"
        app:layout_constraintTop_toBottomOf="@id/tv_phn_header">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".15" />

        <View
            android:id="@+id/partition"
            android:layout_width="@dimen/dimen_1dp"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:background="@color/grey_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guide_start"
            app:layout_constraintStart_toEndOf="@id/phn_code"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phn_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingBottom="@dimen/dimen_8dp"
            android:text="@string/code"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guide_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/phone_no_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:text="@string/phone_hint"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guide_start"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:src="@drawable/ic_tick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_container"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:background="@drawable/round_corner_grey_border_background"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/dimen_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_phn_header"
        app:layout_constraintTop_toBottomOf="@id/tv_phn_header">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_32dp"
            android:text="@string/email_hint"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:src="@drawable/ic_tick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_request_otp"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:background="@drawable/round_corner_background"
        android:backgroundTint="@color/teal_bg"
        android:text="@string/request_otp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/phn_container"
        app:layout_constraintStart_toStartOf="@id/phn_container"
        app:layout_constraintTop_toBottomOf="@id/phn_container" />

</androidx.constraintlayout.widget.ConstraintLayout>